openshift-usage/projects/wordpress/nginx/route.yaml
# route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx-route
  namespace: demo-app
spec:
  to:
    kind: Service
    name: nginx-svc
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
